--- a/appproject/codemon/templates/includes/character_widget.html
+++ b/appproject/codemon/templates/includes/character_widget.html
@@ -713,11 +713,11 @@ document.addEventListener('DOMContentLoaded', function() {
       mumbles: [
         'ごきげんよう',
         'お紅茶が飲みたいですわ',
-        'たまにはゆっくるするのもいいですわね',
+        'よくってよ',
         'わたくしに任せなさい',
         'ふふ、素敵ですわね',
         '何かお手伝いしましょうか？',
-        'どうぞご遠慮なく',
+        'ついていらっしゃい',
         'さあ、何でもおっしゃって'
       ],
       greeting: 'ごきげんよう。わたくしは{{ ai_name }}ですわ。<br>何でもお聞きになって。お力になりますわよ。'
